[gd_scene load_steps=4 format=3 uid="uid://crjnw0eg0iqlp"]

[ext_resource type="Script" uid="uid://c533wolt7afq8" path="res://scenes/test/test_scene_multiplayer_menu.gd" id="1_644sc"]
[ext_resource type="Theme" uid="uid://dhsgc6k51h0rn" path="res://scenes/ui/game_ui_theme.tres" id="2_lspfu"]
[ext_resource type="FontFile" uid="uid://di7gplllef8xy" path="res://assets/ui/fonts/pixelFont-7-8x14-sproutLands.ttf" id="3_kfofq"]

[node name="TestSceneMultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_644sc")

[node name="Join" type="Button" parent="."]
layout_mode = 1
offset_left = 73.0
offset_top = 8.0
offset_right = 110.0
offset_bottom = 39.0
text = "join"

[node name="Start" type="Button" parent="."]
layout_mode = 1
offset_left = 147.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 39.0
text = "start"

[node name="PlayerName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 46.0
offset_right = 188.0
offset_bottom = 77.0
placeholder_text = "player name"

[node name="MultiplayerMenuScreen" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="MultiplayerMenuScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lspfu")

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerMenuScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MultiplayerMenuScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.564706, 0.384314, 0.364706, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_kfofq")
theme_override_font_sizes/font_size = 90
text = "MULTIPLAYER"

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerMenuScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MultiplayerMenuScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"DayNightCounterPanel"

[node name="Host" type="Label" parent="MultiplayerMenuScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Label"
theme_override_font_sizes/font_size = 36
text = "Host"

[node name="HostAddressLineEdit" type="LineEdit" parent="MultiplayerMenuScreen/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Host Address"

[node name="Join" type="Button" parent="MultiplayerMenuScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "Join"

[node name="Back" type="Button" parent="MultiplayerMenuScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GameMenuButton"
text = "Back"

[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="MultiplayerMenuScreen/MarginContainer/VBoxContainer/HBoxContainer/Join" to="." method="_on_join_button_down"]
[connection signal="pressed" from="MultiplayerMenuScreen/MarginContainer/Back" to="." method="_on_back_pressed"]
